@@ -1,5 +1,3 @@
-#   Copyright (c) 2007-2008 Open Source Applications Foundation
-#
 #   Licensed under the Apache License, Version 2.0 (the "License");
 #   you may not use this file except in compliance with the License.
 #   You may obtain a copy of the License at
