@@ -7,6 +7,7 @@ Version 2.1 ->
  - fixed bug where thread's JNIEnv was not set before calling findClass()
  - unhandled java exception now is printed out via ExceptionDescribe()
  - added cast to placate Solaris compiler error in JArray.cpp
+ - JArray Python wrappers should return None when passed a null array
  - 
 
 Version 2.0 -> 2.1
